--- a/css/SDGstyle.css
+++ b/css/SDGstyle.css
@@ -7,10 +7,10 @@ body
 	background-color: #447B87FF;
 	background-image: url("../img/bg3.png");
 }
-main
+#wrapper
 {
 	background-color: white;
-	width: 90%;
+	width: 70%;
 	margin:0 auto;
 }
 header
@@ -44,6 +44,9 @@ aside
 	float:left;
 	width: 20%;
 	font-size: .9em;
+	background-color:#EDEDEDFF;
+	padding: 5px;
+
 }
 aside *
 {
@@ -74,7 +77,7 @@ article p
 	font-size: .85em;
 	background-color: white;
 	padding: 10px;
-	max-width: 50%;
+	max-width: 80%;
 	margin:0 auto;
 	text-align: left;
 	text-indent: 16px;
@@ -106,20 +109,38 @@ img
 	height: auto;
 	width: 460px;
 }
-@media screen and (max-width:680px)
+@media screen and (max-width: 980px)
 {
+	#wrapper
+	{
+		width: 90%;
+	}
+	.left-pane
+	{
+		display: inline-block;
+		width: 100%;
+		margin:0 auto;
+
+
+	}
+	article
+	{
+		width: 100%;
+	}
 	aside
 	{
 		float:initial;
 		width: 50%;
 		margin:0 auto;
 		margin-bottom: 15px;
+		background-color: initial;
 	}
 
 	aside p 
 	{
 		text-align: center;
 		font-size: .75em;
+		margin:0 auto;
 
 	}
 	aside h3 
@@ -127,18 +148,21 @@ img
 		text-align: center;
 		font-size: .95em;
 	}
-	.left-pane
-	{
-		display: inline-block;
-
-	}
+}
+@media screen and (max-width:680px)
+{
+	
+	
 	article h2
 	{
 		background-color: white;
 	}
 	article p
 	{
-		max-width: 75%;
+		font-size: .75em;
+	}
+	article a
+	{
 		font-size: .75em;
 	}
 	footer
