--- a/css/SDGstyle.css
+++ b/css/SDGstyle.css
@@ -1,5 +1,8 @@
 /*CSS Page Software Guild*/
-
+html
+{
+	max-width: 100%;
+}
 body 
 {
 	font-size: 16pt;
@@ -57,6 +60,11 @@ nav a
 	display: inline-flex;
 	background-color:#08353EFF;
 }
+aside *
+{
+	margin: 0;
+	text-align: left;
+}
 
 aside
 {
@@ -65,24 +73,23 @@ aside
 	font-size: .9em;
 	padding: 15px;
 	color: #686868FF;
-	border-left: black solid 2px;
+	border-bottom: black solid 2px;
 
 }
-aside *
+aside p
 {
-	margin: 0;
-	text-align: left;
-
+	text-indent: 10px;
+	font-size: .9em;
 }
-
 article
 {
 	float:left;
 	color: #262626FF;
 	font-size: 1.5em;
 	background-color: #D3E6F2FF;
-	border-top: solid black 2px;
-	border-bottom: solid black 2px;
+	border: solid black 2px;
+	border-width: 2px 2px 2px 0;
+	
 }
 
 article a
@@ -144,7 +151,7 @@ img
 {
 	max-width: 100%;
 	height: auto;
-	width: 460px;
+	width: 360px;
 }
 @media screen and (max-width: 1080px)
 {
@@ -152,21 +159,17 @@ img
 	#wrapper
 	{
 		min-width: 345px;
-		
 	}
-	
 	.content
 	{
 		display: inline-block;
 		max-width: 100%;
-		max-height: 100%;
 		margin:0 auto;
-		border-collapse: collapse;
-		
 	}
 	article
 	{
 		max-width: 100%;
+		border-right: initial;
 	}
 	article p
 	{
@@ -175,12 +178,12 @@ img
 	aside
 	{
 		display: inline-block;
-		float:initial;
 		max-width: 100%;
+		float:initial;
 		margin:0 auto;
 		padding: 0;
-		background-color: initial;
-		border-left: initial;
+		background-color: none;
+		border: initial;
 	}
 
 	aside p 
@@ -206,23 +209,7 @@ img
 	}
 	
 }
-@media screen and (max-width:680px)
-{
-	
-	article p
-	{
-		font-size: .75em;
-	}
-	article a
-	{
-		font-size: .65em;
-	}
-	
-	nav
-	{
-		font-size:.7em;
-	}
-}
+
 
 
 
