--- a/css/SDGstyle.css
+++ b/css/SDGstyle.css
@@ -1,7 +1,8 @@
 /*CSS Page Software Guild*/
+
 html
 {
-	max-width: 100%;
+	overflow-x: hidden;
 }
 body 
 {
@@ -10,18 +11,16 @@ body
 	'Segoe UI', Optima, Arial, sans-serif;
 	background-color: #08353EFF;
 	background-image: url("../img/bg3.png");
-	min-width:270px;
 	margin: 0;
 }
 #wrapper
 {
 	max-width: 90%;
-	margin:0 auto;
+	margin: 0 auto;
 	border: solid black;
 	border-width: 2px 4px 2px 4px;
 	border-radius: 5px 5px 5px 5px;
 	background-color: #0C525EFF;
-
 }
 
 .font-size-down-center
@@ -46,6 +45,7 @@ nav
 	color: white;
 	text-align: center;
 	max-width: 100%;
+	background-color: #0C525EFF;
 	
 }
 nav a
@@ -90,7 +90,7 @@ article
 	float:left;
 	color: #262626FF;
 	font-size: 1.5em;
-	background-color: #ADD1CC;
+	background-color: #E0EAE9;
 	border: solid #08353EFF 2px;
 	border-width: 2px 0 0 0;
 	
@@ -125,14 +125,16 @@ article .about
 }
 .left-pane p
 {
-	max-width: 80%;
-	min-width: 65%;
+	max-width: 55%;
+	
 	margin: 0 auto;
 
 }
 article .meeting-info
 {
 	margin-bottom: 10%;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 footer *
 {
@@ -177,10 +179,6 @@ img
 @media screen and (max-width: 1200px)
 {
 	
-	#wrapper
-	{
-		min-width: 345px;
-	}
 	.content
 	{
 		display: inline-block;
@@ -203,7 +201,7 @@ img
 		float:initial;
 		margin:0 auto;
 		padding: 0;
-		background-color: initial;
+		background-color: #0C525EFF;
 		border: initial;
 	}
 
@@ -232,14 +230,12 @@ img
 }
 @media screen and (max-width: 650px)
 {
+
 	#wrapper
 	{
+		margin: 0;
 		max-width: 100%;
-		margin: 0;
-	}
-	body
-	{
-		margin: 0;
+
 	}
 }
 
