--- a/css/SDGstyle.css
+++ b/css/SDGstyle.css
@@ -6,14 +6,14 @@ html
 }
 body 
 {
-	font-family: "Courier New", Courier, monospace;
-	margin: 0;
-	background-color: #FFEEEC;
-	color:#303030;	
 	font-size: 16pt;
-	
+	font-family: Calibri, Candara, Segoe, 
+	'Segoe UI', Optima, Arial, sans-serif;
+	background-color: #08353EFF;
+	background-image: url("../img/bg3.png");
+	margin: 0;
 }
-/*#wrapper
+#wrapper
 {
 	max-width: 90%;
 	margin: 0 auto;
@@ -21,47 +21,31 @@ body
 	border-width: 2px 4px 2px 4px;
 	border-radius: 5px 5px 5px 5px;
 	background-color: #0C525EFF;
-}*/
+}
 
-
+.font-size-down-center
+{
+	font-size: .55em;
+	text-align: center;
+	display: inline;
+}
+.font-size-down
+{
+	font-size: .65em;
+	text-align: center;
+	
+}
 header
 {
 	text-align: center;
-	background-color: rgb(99,155,153);
-	background-image: url("../img/bg3.png");
-	min-height: 250px;
-	display: inline-block;
-	width: 100%;
+	background-color: black;
 }
-header h1
-{
-	max-width: 80%;
-	margin-top: 25px;
-	margin: 0 auto;
-	font-size: 5em;
-	font-family: Optima, Segoe,  'Segoe UI', Candara, Calibri, Arial, sans-serif;
-	color: #DDDDDD;
-}
-
-header i
-{
-	margin-top: 50px;
-	margin-bottom: 10px;
-}
-header .fa-github-square, .fa-facebook-square
-{
-	color: #DDDDDD;
-	font-size: 2.5em;
-}
-
 nav
 {
-	
-	text-align: right;
+	color: white;
+	text-align: center;
 	max-width: 100%;
-	background-color: #1C1C1C;
-	padding-top: 25px;
-	padding-bottom: 25px;
+	background-color: #0C525EFF;
 	
 }
 nav a
@@ -69,10 +53,16 @@ nav a
 	color: white;
 	text-decoration: none;
 	margin-right: 15px;
-	font-size: .95em;
+	font-size: 1.4em;
+}
+.content
+{
+	
+	text-align: center;
+	display: inline-flex;
+	/*background-color:#08353EFF;*/
 	
 }
-
 aside *
 {
 	margin: 0;
@@ -82,133 +72,208 @@ aside *
 aside
 {
 	float:left;
-	max-width: 14%;
+	max-width: 20%;
 	font-size: .9em;
 	padding: 15px;
 	color: white;
-	background-color:#1C1C1CDE;
-	display: none;
-	
+	background-color: #B1D7CD;
+	border-top: #08353EFF solid 2px;
 	
 }
+
+#calendar
+{
+	max-width: 40%
+}
+
+#today
+{
+	background-color: blue;
+}
+
 aside p
 {
 	text-indent: 10px;
 	font-size: .9em;
 }
-
-.main-column
+article
 {
-	
+	float:left;
+	color: #262626FF;
 	font-size: 1.5em;
+	background-color: #E0EAE9;
+	border: solid #08353EFF 2px;
+	border-width: 2px 0 0 0;
+	
 }
 
-article .main-column a
+article a
 {
-	
+	color:#707070FF;
 	text-decoration: none;
 
 }
 
-
-
-article .about 
+article *
 {
-	max-width: 60%;
-	font-size: 1em;
-	text-align: left;
+	margin:0;
+	padding:0;
+}
+article p
+{
+	font-size: .85em;
+	padding: 10px;
+	max-width: 80%;
 	margin:0 auto;
-	margin-top: 2.5%;
-	margin-bottom: 2.5%;
+	text-align: left;
+	text-indent: 16px;
 	
 }
-
-article .about h2
+article .about 
 {
-	margin: 0;
-	margin-top: 15px;
-	font-size: 1.5em;
+	margin-top: 5%;
+	margin-bottom: 10%;
 }
-
-article .about p
+.left-pane p
 {
-	margin: 0px;
-	margin-top: 15px;
+	max-width: 55%;
+	
+	margin: 0 auto;
+
 }
 article .meeting-info
 {
-	max-width: 65%;
-	margin: 0 auto;
-	margin-bottom: .5%;
-	text-align: center;
-	font-size: .80em;
-
+	margin-bottom: 10%;
+	margin-left: 10%;
+	margin-right: 10%;
 }
-
-article .meeting-info h3
+div #calendar-cont
 {
-	margin: 0;
+	margin-top: 5%;
+	margin-bottom: 10%;
+	padding: 10px;
+	width: 210px;
+	height: 210px;
+	text-align: center;
+	border: 1px solid #000000;
+	border-radius: 10px;
+	font-size: 16px;
+	background-image: linear-gradient(#add8e6, #7997a1)
+}
+div #calendar-cont
+{
+	padding: 0;
 	margin-bottom: 5px;
 }
-article .meeting-info p
+#calendar-month-year
 {
-	margin: 0;
-
+	margin: 2px;
+}
+#calendar-dates>table>tr>td
+{
+	padding: 4px;
 }
 
+footer *
+{
+	margin: 0;
+	font-size: .8em;
+	color: white;
+	background-color: black;
+	padding: 0;
+}
 footer
 {
-	display: inline-block;
-	width: 100%;
-	background-color: #1C1C1C;
-	font-size: 12pt;
-	text-align: center;
-	color: white;
-
+	
+	background-color: black;
+	max-width: 100%;
 }
-
-footer #copyright 
+footer #copyright
 	{	
+		margin-right: 99%;
 		display: inline-flex;
-		width: 100%;
-		font-size: 1em;
-		padding-bottom: 5px;
-	}
-footer #copyright p
-{
-	text-align: right;
-	width: inherit;
-	margin-right: 5px;
-}
+		max-width: 100%;
+		width: 400px;
 
+	}
 footer #contact
 	{	
-		width: 100%;
-		margin: 0 auto;
-		margin-top: 15px;
-		margin-bottom: 20px;
-		font-size: 1.5em;
-		margin-left: 5px;
-		
-	}
-Footer #contact h4, p
-{
-	margin: 0;
-}
+		display: inline-flex;
+		width: 900px;
+		max-width: 100%;
 
-footer #contact a
+	}
+#contact a
 {
 	text-decoration: none;
-	color: white;
 }
 img
 {
 	max-width: 100%;
 	height: auto;
 	width: 360px;
-	display: none;
 }
+@media screen and (max-width: 1200px)
+{
+	
+	.content
+	{
+		display: inline-block;
+		max-width: 100%;
+		margin:0 auto;
+	}
+	article
+	{
+		max-width: 100%;
+		border-right: initial;
+	}
+	article p
+	{
+		font-size: .95em;
+	}
+	aside
+	{
+		display: inline-block;
+		max-width: 100%;
+		float:initial;
+		margin:0 auto;
+		padding: 0;
+		background-color: #0C525EFF;
+		border: initial;
+	}
+	aside p 
+	{
+		text-align: center;
+		font-size: .75em;
+		margin:0 auto;
 
+	}
+	aside h3 
+	{
+		text-align: center;
+		font-size: .95em;
+	}
+	footer
+	{
+		font-size: 1em;
+	}
+
+	#contact a
+	{
+		text-align: right;
+	}
+	
+}
+@media screen and (max-width: 650px)
+{
+
+	#wrapper
+	{
+		margin: 0;
+		max-width: 100%;
+
+	}
+}
 
 
 
