--- a/css/SDGstyle3.css
+++ b/css/SDGstyle3.css
@@ -12,8 +12,9 @@ body
 	background-color: #010700FF;
 	background-color: #151412FF;
 	color:#303030;	
-	color: #E0FFE0FF;
-	font-size: 28pt;
+	color: #E0FFE0;
+	font-size: 16pt;
+	min-width: 360px;
 	
 }
 /*#wrapper
@@ -29,28 +30,27 @@ nav
 {
 	display: block;
 	width: 100%;
-	height: 120px;
+	min-height: 60px;
 	padding: 0;
-	background-color: #1C1C1C;
 	background-color: #0C0C0C;
 	text-align: right;
 	position: relative;
+	font-size: 16pt;
 }
 
-nav .nav-img
+nav .nav-img 
 {
-	height: 120px;
-	display: inline-block;
 	margin-left: 15px;
+	max-height: 60px;
 	float:left;
-	/*background-image: url("../img/grnSDG.png");*/
+	
 }
 
 nav .nav-links
 {
-	height: auto;
-	font-size: .95em;
 	margin-right: 15px;
+	width: 90%;
+	min-width: 60px;
 	display: inline-block;
 	position: absolute;
 	bottom: 0;
@@ -62,18 +62,21 @@ nav .nav-links a
 	text-decoration: none;
 	color: inherit;
 	margin-top: 99%;
+	font-size: ;
 }
 
 nav .nav-links a:hover
 {
-	color: #3BA828FF;
+	color: #3BA828;
 	transition-duration: .75s;
 }
 
 nav img
 {
-	width: 150px;
-	height: auto;
+	
+	width: auto;
+	max-height: 60px;
+
 }
 header
 {
@@ -84,36 +87,42 @@ header
 	min-height: 250px;
 	display: inline-block;
 	width: 100%;
+	font-size: 3em;
 }
 header h1
 {
 	max-width: 100%;
 	margin-top: 25px;
 	margin: 0 auto;
-	font-size: 5em;
 	font-family: Optima, Segoe,  'Segoe UI', Candara, Calibri, Arial, sans-serif;
-	color: #E0FFE0FF;
+	color: #E0FFE0;
+
 }
 
 header i
 {
-	margin-top: 50px;
+	/*margin-top: 50px*/;
 	margin-bottom: 10px;
 
 }
 header .fa-github-square, header .fa-facebook-square
 {
-	color: #E0FFE0FF;
-	font-size: 2.5em;
+	color: #E0FFE0;
+	
+}
+
+header .fa-github-square:hover, header .fa-facebook-square:hover
+{
+	color: #3BA828;
+	transition-duration: .75s;
 }
 
 
 .main
 {
-	
-	font-size: 38pt;
 	display: inline-block;
 	margin-top: 80px;
+
 
 }
 
@@ -128,39 +137,35 @@ header .fa-github-square, header .fa-facebook-square
 
 .about 
 {
-	max-width: 70%;
+	max-width: 50%;
 	float: left;
 	margin:0 auto;
-	font-size: 60pt;
-	
+	font-size:2em;
+	margin-bottom: 40px;	
 }
 
 .about h2, .about p
 {
 	/*background-color: white;
 	background-color: #2D392C;*/
-	
 	margin: 0;
 	padding: 0;
 	margin: 0 auto;
 	max-width: 80%;
 	margin: 0 auto;
-	padding: 15px;
-	
-	
+	padding: 15px;	
 }
+
 .about h2
 {
-	font-size: 1.5em;
 	border-radius: 5px 5px;
 }
 
 .about p
 {
-	
-	font-size: .75em;
 	border-radius: 0 0 5px 5px;
 }
+
 .meeting-info
 {
 
@@ -169,8 +174,8 @@ header .fa-github-square, header .fa-facebook-square
 	text-align: center;
 	clear:left;
 	margin-bottom: 50px;
-	margin-top: 200px;
-	font-size: 24pt;
+	margin-top: 125px;
+	font-size: .95em;
 	
 
 }
@@ -188,14 +193,15 @@ header .fa-github-square, header .fa-facebook-square
 .meeting-info p
 {
 	margin: 0;
-	font-size: .85em;
+	
 
 }
 .officers
 {
-	max-width: 30%;
+	max-width: 50%;
 	float: left;
-	font-size: .5em;
+	
+
 
 }
 .officers table
@@ -205,7 +211,6 @@ header .fa-github-square, header .fa-facebook-square
 	width: auto;
 	margin: 0 auto;
 	border-radius: 5px;
-	
 	color: inherit;
 	background-color: #303030;
 	background-color: #2E322E;
@@ -234,9 +239,9 @@ footer
 	width: 100%;
 	background-color: #1C1C1C;
 	background-color: #0C0C0C;
-	font-size: 12pt;
 	text-align: center;
 	color: inherit;
+	font-size: .85em;
 
 }
 
@@ -244,7 +249,7 @@ footer #copyright
 	{	
 		display: inline-flex;
 		width: 100%;
-		font-size: 1em;
+		
 		padding-bottom: 5px;
 	}
 footer #copyright p
@@ -260,7 +265,7 @@ footer #contact
 	margin: 0 auto;
 	margin-top: 15px;
 	margin-bottom: 20px;
-	font-size: 1.5em;
+
 	margin-left: 5px;	
 }
 
@@ -283,6 +288,84 @@ header img
 }
 
 
+@media screen and (max-width: 1050px)
+{
+	
+	body
+	{
+		font-size: 14pt;
+	}
+	
+	.main
+	{
+		margin-top: 30px;
+	}
+	.about
+	{
+		width: 100%;
+		max-width: 100%;
+		font-size: 3em;
+	}
+	.about h2, .about p
+	{
+		width:90%;
+		margin: 0 auto;
+	}
+	.officers
+	{
+		clear:left;
+		max-width: 100%;
+		width: 100%;
+		font-size: 1.5em;
+	}
 
+	.officers table
+	{
+		max-width: 80%;
+		margin: 0 auto;
+	}
+	.meeting-info
+	{
+		font-size: 1.25em;
+	}
+
+	footer
+	{
+		font-size: 1.25em;
+	}
+}
+
+@media screen and (max-width: 950px) 
+{
+	body
+	{
+		font-size: 12pt;
+	}
+}
+
+
+@media screen and (max-width: 850px)
+{
+	body
+	{
+		font-size: 10pt;
+	}
+}
+
+@media screen and (max-width: 650px)
+{
+	body
+	{
+		font-size: 8pt;
+	}
+}
+
+@media screen and (max-width: 450px)
+{
+	body
+	{
+		font-size: 6pt;
+	}
+}
 
 
