--- a/css/SDGstyle3.css
+++ b/css/SDGstyle3.css
@@ -122,6 +122,7 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 {
 	display: inline-block;
 	margin-top: 80px;
+	margin-bottom: 80px;
 
 
 }
@@ -137,45 +138,52 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 
 .about 
 {
-	max-width: 50%;
+	max-width: 65%;
 	float: left;
 	margin:0 auto;
 	font-size:2em;
-	margin-bottom: 40px;	
+	margin-bottom: 40px;
+	text-align: left;
+	
 }
 
 .about h2, .about p
 {
-	/*background-color: white;
-	background-color: #2D392C;*/
 	margin: 0;
 	padding: 0;
 	margin: 0 auto;
-	max-width: 80%;
+	max-width: 50%;
 	margin: 0 auto;
 	padding: 15px;	
 }
 
 .about h2
 {
-	border-radius: 5px 5px;
+	/*border-radius: 5px 5px 0 0;
+	border: solid #2E322E;
+	border-width: 2px 2px 0 2px;*/\
+	text-transform: uppercase;
 }
 
 .about p
 {
-	border-radius: 0 0 5px 5px;
+	/*border-radius: 0 0 5px 5px;
+	border: solid #2E322E;
+	border-width: 0px 2px 2px 2px;*/
+
+	hyphens: auto;
+
+
+
 }
 
 .meeting-info
 {
 
-	width: 95%;
-	margin: 0 auto;
+	max-width: 35%;
 	text-align: center;
-	clear:left;
-	margin-bottom: 50px;
-	margin-top: 125px;
 	font-size: .95em;
+	float:right;
 	
 
 }
@@ -185,6 +193,13 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 	color: inherit;
 
 }
+
+.meeting-info h3, .meeting-info p
+{
+	max-width: 90%;
+	margin: 0 auto;
+}
+
 .meeting-info h3
 {
 	margin: 0;
@@ -198,22 +213,21 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 }
 .officers
 {
-	max-width: 50%;
+	max-width: 35%;
 	float: left;
-	
-
+	margin-bottom: 50px;
 
 }
 .officers table
 {
-	max-width: 60%;
+	
 	height: auto;
-	width: auto;
+	width: 95%;
 	margin: 0 auto;
 	border-radius: 5px;
 	color: inherit;
-	background-color: #303030;
-	background-color: #2E322E;
+	/*background-color: #2E322E;*/
+	/*border: solid 2px #2E322E;*/
 
 }
 .officers tr, th
@@ -227,7 +241,6 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 	width: 90px;
 	max-height: 100%;
 	height: 90px;
-
 	border-radius: 10px;
 	background-color: black;
 }
@@ -241,7 +254,7 @@ footer
 	background-color: #0C0C0C;
 	text-align: center;
 	color: inherit;
-	font-size: .85em;
+	font-size: 1.25em;
 
 }
 
@@ -326,7 +339,15 @@ header img
 	}
 	.meeting-info
 	{
+		clear:left;
+		max-width: 100%;
+		width: 100%;
 		font-size: 1.25em;
+
+	}
+	.meeting-info h3, .meeting-info p
+	{
+		margin: 0 auto;
 	}
 
 	footer
