--- a/css/SDGstyle3.css
+++ b/css/SDGstyle3.css
@@ -105,16 +105,16 @@ header i
 	margin-bottom: 10px;
 
 }
-header .fa-github-square, header .fa-facebook-square
+header a
 {
 	color: #E0FFE0;
 	
 }
 
-header .fa-github-square:hover, header .fa-facebook-square:hover
+header a:hover
 {
 	color: #3BA828;
-	transition-duration: .75s;
+	transition-duration: .5s;
 }
 
 
@@ -144,7 +144,8 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 	font-size:2em;
 	margin-bottom: 40px;
 	text-align: left;
-	
+	hyphens: auto;
+	-webkit-hyphens: auto;
 }
 
 .about h2, .about p
@@ -152,7 +153,7 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 	margin: 0;
 	padding: 0;
 	margin: 0 auto;
-	max-width: 50%;
+	max-width: 80%;
 	margin: 0 auto;
 	padding: 15px;	
 }
@@ -163,6 +164,7 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 	border: solid #2E322E;
 	border-width: 2px 2px 0 2px;*/\
 	text-transform: uppercase;
+
 }
 
 .about p
@@ -170,11 +172,6 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 	/*border-radius: 0 0 5px 5px;
 	border: solid #2E322E;
 	border-width: 0px 2px 2px 2px;*/
-
-	hyphens: auto;
-
-
-
 }
 
 .meeting-info
@@ -196,7 +193,7 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 
 .meeting-info h3, .meeting-info p
 {
-	max-width: 90%;
+	
 	margin: 0 auto;
 }
 
@@ -207,7 +204,7 @@ header .fa-github-square:hover, header .fa-facebook-square:hover
 }
 .meeting-info p
 {
-	margin: 0;
+
 	
 
 }
@@ -262,14 +259,15 @@ footer #copyright
 	{	
 		display: inline-flex;
 		width: 100%;
-		
+		font-size: .8em;
 		padding-bottom: 5px;
 	}
 footer #copyright p
 {
-	text-align: right;
-	width: inherit;
-	margin-right: 5px;
+		margin-right: 5px;
+		width: inherit;
+		text-align: right;
+
 }
 
 footer #contact
@@ -315,20 +313,26 @@ header img
 	}
 	.about
 	{
-		width: 100%;
 		max-width: 100%;
 		font-size: 3em;
+
 	}
 	.about h2, .about p
 	{
-		width:90%;
-		margin: 0 auto;
+		width:100%;
+		
+	}
+
+	.about p 
+	{
+		max-width: 90%;
+		margin:0 auto;
 	}
 	.officers
 	{
 		clear:left;
-		max-width: 100%;
 		width: 100%;
+		max-width: 100%;
 		font-size: 1.5em;
 	}
 
@@ -352,7 +356,7 @@ header img
 
 	footer
 	{
-		font-size: 1.25em;
+		font-size: 1.7em;
 	}
 }
 
